--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         
         // 🚨 중요: 1단계에서 얻은 Firebase 설정 코드를 여기에 붙여넣으세요
         const firebaseConfig = {
-          apiKey: "YOUR_API_KEY",
-          authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-          projectId: "YOUR_PROJECT_ID",
-          storageBucket: "...",
-          messagingSenderId: "...",
-          appId: "..."
-        };
+          apiKey: "AIzaSyA6OwwtJNtTqujb6PW6nolYmstOj7zBqCA",
+          authDomain: "drawgreen-3bc38.firebaseapp.com",
+          projectId: "drawgreen-3bc38",
+          storageBucket: "drawgreen-3bc38.firebasestorage.app",
+          messagingSenderId: "1050500469107",
+          appId: "1:1050500469107:web:6c25e893e7c12500f23506",
+          measurementId: "G-M3TK20VTL6"
 
         // Firebase 초기화
         firebase.initializeApp(firebaseConfig);
@@ -139,3 +139,4 @@
 
 </body>
 </html>
+
