--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>멀티플레이 팝캣</title>
+    <title>멀티플레이 초록록</title>
     <style>
         /* CSS 스타일: 사용자 인터페이스 */
         body {
@@ -53,7 +53,7 @@
 <body>
 
     <div id="start-screen">
-        <h2>팝캣 월드에 오신 것을 환영합니다!</h2>
+        <h2>초록 때리기기</h2>
         <input type="text" id="user-id" placeholder="나만의 ID를 입력하세요">
         <button id="start-button">게임 시작</button> 
         <p style="margin-top: 20px; color: #666;">* 클릭 횟수는 이 ID에 누적됩니다.</p>
@@ -66,7 +66,7 @@
         <div class="instruction" style="color:#444;">마우스 클릭 또는 스페이스바를 누르세요!</div>
     </div>
     
-    <audio id="pop-sound" src="pop.mp3" preload="auto"></audio> 
+    //<audio id="pop-sound" src="pop.mp3" preload="auto"></audio> 
 
     <script>
         // ----------------------------------------------------
@@ -183,3 +183,4 @@
 
 </body>
 </html>
+
