Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>멀티플레이 초록그림림</title>
+    <title>멀티플레이 초록그림</title>
     <style>
         body {
             display: flex;
@@ -262,3 +262,4 @@
 
 </body>
 </html>
+
